--- a/docker-compose.pgadmin.yml
+++ b/docker-compose.pgadmin.yml
@@ -9,6 +9,8 @@ services:
 #      - "5432:5432"
     env_file:
       - ".env.dev"
+    networks:
+      - default
   redis:
     image: redis:latest
     container_name: "redis"
@@ -17,6 +19,8 @@ services:
 #      - "6379:6379"
     volumes:
       - redis_data:/data
+    networks:
+      - default
   pgadmin:
     container_name: pgadmin_container
     image: dpage/pgadmin4
@@ -29,8 +33,15 @@ services:
     ports:
       - "5050:80"
     restart: unless-stopped
+    networks:
+      - default
 
 volumes:
   postgres_data:
   redis_data:
   pgadmin:
+
+networks:
+  default:
+    name: bot_network
+    driver: bridge
