--- a/docker-compose.pgadmin.yml
+++ b/docker-compose.pgadmin.yml
@@ -4,7 +4,7 @@ services:
     container_name: "database"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    restart: on-failure
+    restart: always
 #    ports:
 #      - "5432:5432"
     env_file:
