--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   db:
     image: postgres:latest
     container_name: "database"
-    restart: on-failure
+    restart: always
     volumes:
       - ./postgres_data/db:/var/lib/postgresql/data
     ports:
